--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,7 +3,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
     <link rel="stylesheet" href="css/main.css">
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
@@ -12,8 +11,11 @@
 
     <title>FFRKreeper {{title}}</title>
 </head>
-
 <body>
+    <nav class="navbar navbar-light bg-faded">
+        <h1 class="navbar-brand mb-0">FFRKreeper</h1> <a href="/dungeons">dungeons</a>
+    </nav>
+
     {{{body}}}
 </body>
 </html>
