--- a/views/battleList.hbs
+++ b/views/battleList.hbs
@@ -7,7 +7,7 @@
 
                 <ul class="list-group">
                     {{#each itemsFound}}
-                    <li class="list-group-item"><img src='{{dropImg}}' />{{dropName}}</li>
+                    <li class="list-group-item"><img src='{{dropImg}}' />{{dropName}} - {{{dropRate}}}</li>
                     {{/each}}
                 </ul>
 
