--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar navbar-light bg-faded">
-        <h1 class="navbar-brand mb-0">FFRKreeper</h1> <a href="/dungeons">dungeons</a>
+        <h1 class="navbar-brand mb-0">FFRKreeper</h1> <a href="/dungeons">Drop Statistics</a>
     </nav>
 
     {{{body}}}
