--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,13 @@ body {
     width: 100px;
 }
 
+
+.dungeonDropImg  {
+    height: 80px;
+    width: 80px;
+}
+
+
 footer {
     background-color: #f7f7f7;
     /*    color: white;*/
