displaying newest dungeons first

--- a/views/dungeonList.hbs
+++ b/views/dungeonList.hbs
@@ -4,10 +4,12 @@
             <ul class="list-group">
                 {{#each dungeons}}
                 <li class="list-group-item">
-                    <a href="/dungeon/{{_id}}/battles">Dungeon: {{_id}} {{dungeonName}}</a>
-                    {{#each itemsFound}}
-                    <img class="dungeonDropImg" src="{{dropImg}}" title="{{dropName}}" />
-                    {{/each}}
+                    <a href="/dungeon/{{_id}}/battles">
+                        Dungeon: {{_id}} {{dungeonName}}
+                        {{#each itemsFound}}
+                        <img class="dungeonDropImg" src="{{dropImg}}" title="{{dropName}}" />
+                        {{/each}}
+                    </a>
                 </li>
                 {{/each}}
             </ul>
