adds enemy data and updates instructions

--- a/views/battleList.hbs
+++ b/views/battleList.hbs
@@ -3,7 +3,7 @@
         <div id="left-side" class="col-sm">
             <ul class="list-group">
                 {{#each battles}}
-                <li class="list-group-item">Battle: {{denaBattleId}}</li>
+                <li class="list-group-item">Battle: {{name}}</li>
 
                 <ul class="list-group">
                     {{#each uniqueDrops}}
