--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,16 +29,19 @@
 
                 <h6>Notifications</h6>
 
-                <p>If you want, put your email in there, too. That way, when you get a 5 star drop or better, FFRKreeper will email you.</p>
+                <p>If you want, put your email in there, too.</p>
 
                 <p>Same with phone, but if you put in a phone number, use format "+15555555"</p>
 
+                <p>If you provide a phone number and/or email address, you don't need to keep the app open. FFRKreeper will text/email you when a drop meets the criterial you specify when signing in.</p>
+
+                <p>Additionally, FFRKreeper will let you know when your session id expires!</p>
+
                 <p>To Note:</p>
                 <ol>
-                    <li>Notifications are only for 5* items or rarer.</li>
                     <li>Sending SMS and Email costs money. If this feature blows up, we may have to pull it</li>
                     <li>Email can be a bit slow</li>
-                    <li>You need to have the app running in a browser window somewhere for notifications to work</li>
+                    <li>This app will not work for MP Raid Dungeons, but solo Raid Dungeons are fine</li>
                 </ol>
 
                 <h6>Mac / iOS</h6>
@@ -69,12 +72,6 @@
                     <li>Or instead of opening it with WireShark on a PC, open the file with a text editor on your phone and find "http_session_sid". It will be easier if the said editor have a "find text" option. Google app "Docs" have it.</li>
                 </ol>
 
-                <h6>Notes</h6>
-                <ol>
-                    <li>This app will not work for MP Raid Dungeons, but solo Raid Dungeons are fine</li>
-                    <li>If the app tells you you're not in a battle and you are, you may need to refresh and get your session id again.</li>
-                    <li>Keep an eye on the 'status' below. If you become disconnect, refresh and paste your session id again.</li>
-                </ol>
             </div>
             <p></p>
 
