adds enemy data and updates instructions

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <div class="alert alert-danger">Update: Click "Drop Statistics" in the nav above, or the link in your feed to see all drops for a particular battle or dungeon.</div>
     <div class="row">
         <div id="left-side" class="col-sm">
             <p></p>
