adds some basic user info

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,6 +23,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/dungeons">Drop Statistics</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users">Kreepers</a>
+                </li>
             </ul>
         </div>
     </nav>
