--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,6 +26,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/users">Kreepers</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/images">Images</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/audio-files">Audio</a>
+                </li>
             </ul>
         </div>
     </nav>
