--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,9 +20,9 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/dungeons">Drop Statistics</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="/users">Kreepers</a>
                 </li>
