trying to figure out this memory issue

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,7 +23,7 @@
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="/dungeons">Drop Statistics</a>
                 </li> -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/users">Kreepers</a>
                 </li>
                 <li class="nav-item">
@@ -31,7 +31,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/audio-files">Audio</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
