trying to fix memory issue

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -97,7 +97,7 @@
             <div class="col">
                 <div class="d-flex flex-row-reverse">
                     <div class="p-2">
-                        <span class="badge badge-default">Status: Connecting...</span>
+                        <span style="display: none;" class="badge badge-default">Status: Connecting...</span>
                         <span style="display: none;" class="badge badge-danger">Status: Disconnected</span>
                         <span style="display: none;" class="badge badge-success">Status: Connected</span>
                     </div>
@@ -108,4 +108,4 @@
 </footer>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="js/index.js?version=1.9"></script>
+<script src="js/index.js?version=1.10"></script>
