--- a/views/dungeonList.hbs
+++ b/views/dungeonList.hbs
@@ -1,18 +1,12 @@
 ﻿<div class="container-fluid">
     <div class="row">
         <div id="left-side" class="col-sm">
-            <ul class="list-group">
-                {{#each dungeons}}
-                <li class="list-group-item">
-                    <a href="/dungeon/{{_id}}/battles">
-                        Dungeon: {{_id}} {{dungeonName}}
-                        {{#each itemsFound}}
-                        <img class="dungeonDropImg" src="{{dropImg}}" title="{{dropName}}" />
-                        {{/each}}
-                    </a>
-                </li>
-                {{/each}}
+            <ul class="list-group appendPoint"> 
+                {{>dungeons}}
             </ul>
+            <div class="loading"></div>
         </div>
     </div>
 </div>
+
+<script src="js/dungeon.js?version=1.9"></script>
