--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,6 +28,14 @@ body {
     width: 80px;
 }
 
+.loading {
+    display: none;
+}
+.loading img {
+    margin: 0 auto;
+    display: block;
+}
+
 
 footer {
     background-color: #f7f7f7;
