--- a/views/dungeonList.hbs
+++ b/views/dungeonList.hbs
@@ -4,7 +4,7 @@
             <ul class="list-group appendPoint"> 
                 {{>dungeons}}
             </ul>
-            <div class="loading"></div>
+            <div class="loading"><img src="images/loading.gif" ></div>
         </div>
     </div>
 </div>
