--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,30 +1,13 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-sm">
-      <h1>FFRKreeper Users</h1>    
-    </div>
-  </div>
 
   <div class="row">
-    <div class="col-sm">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Handle</th>
-            <th>Drops</th>
-            <th>In Dungeon?</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each users}}
-            <tr>
-              <td><a href="/users/{{_id}}">{{dena.name}}</a></td>
-              <td>{{drops.length}}</td>
-              <td>{{dena.json.is_in_dungeon}}</td>
-            </tr>
-          {{/each}}
-        </tbody>
-      </table>
-    </div>
+    {{#each users}}
+      <div class="col-xs" style="text-align: center;">
+        <img src="{{buddy.imgUrl}}" /><br />
+        <!--a href="/users/{{_id}}">{{dena.name}}</a><br /-->
+        {{dena.name}}<br />
+        {{dena.invite_id}}
+      </div>
+    {{/each}}
   </div>
 </div>
