--- a/views/audio-files/index.hbs
+++ b/views/audio-files/index.hbs
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class="container-fluid audio-files index">
   <div class="row">
     <div class="col-sm">
-      <h1>FFRKreeper Audio Files</h1>    
+      <h1>Audio Files</h1>    
     </div>
   </div>
 
