--- a/views/battleList.hbs
+++ b/views/battleList.hbs
@@ -1,22 +1,30 @@
-﻿<div class="container-fluid">
-    <div class="row">
-        <div id="left-side" class="col-sm">
-            <ul class="list-group">
-                {{#each battles}}
-                <li class="list-group-item">Battle: {{name}}</li>
+﻿<div class="container-fluid battles index">
+  {{#each battles}}
+  <div class="card">
+    <div class="card-block">
+      <h4 class="card-title">Battle: {{name}}</h4>
+      <ul class="list-unstyled">
+        {{#each uniqueDrops}}
 
-                <ul class="list-group">
-                    {{#each uniqueDrops}}
+        <li class="media">
+          <img class="d-flex mr-3" src="{{imgUrl}}">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">{{name}}</h5>
+            Drop Rate: {{rate}}% - {{hits}} out of {{total}} drops for this battle have been for this item
+          </div>
+        </li>
+        {{/each}}
 
-                    <li class="list-group-item"><img src='{{imgUrl}}' />{{name}} - Drop Rate: {{rate}}% - {{hits}} out of {{total}} drops for this battle have been for this item</li>
-                    {{/each}}
-
-                    {{#unless itemsFound}}
-                    <li class="list-group-item"><img src='https://placeholdit.imgix.net/~text?txtsize=50&txt=%3F&w=112&h=112&txttrack=0' />No drops recorded for this battle</li>
-                    {{/unless}}
-                </ul>
-                {{/each}}
-            </ul>
-        </div>
+        {{#unless itemsFound}}
+        <li class="media">
+          <img class="d-flex mr-3" src="https://placeholdit.imgix.net/~text?txtsize=50&txt=%3F&w=112&h=112&txttrack=0">
+          <div class="media-body">
+            No drops recorded for this battle
+          </div>
+        </li>
+        {{/unless}}
+      </ul>
     </div>
+  </div>
+  {{/each}}
 </div>
