--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,7 @@ body > .container-fluid {
 
 .drops.index .loading-wrapper {
     text-align: center;
+    display: none;
 }
 
 .drops.index form {
