--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -7,7 +7,7 @@
           <img class="d-flex mr-3" src="{{buddy.imgUrl}}" alt="{{dena.name}}">
           <div class="media-body">
             <h5 class="mt-0">{{dena.name}}</h5>
-            <ul>
+            <ul class="list-unstyled">
               <li>{{dena.supporter_buddy_soul_strike_name}}</li>
               <li>Code: {{dena.invite_id}}</li>
               {{#if dena.mnd}}
@@ -20,9 +20,7 @@
               <li>{{dena.atk}} ATK</li>
               {{/if}}
             </ul>
-            <blockquote class="blockquote">
-              <p class="mb-0">{{dena.profile_message}}</p>
-            </blockquote>
+            <p class="mb-0">"{{dena.profile_message}}"</p>
           </div>
         </div>
       </div>
