adds event banners

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,11 +30,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/enemies">Enemies</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/images">Images</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="/audio-files">Audio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/events">Event Banners</a>
                 </li>
             </ul>
 
