--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,11 @@ body > .container-fluid {
     display: none;
 }
 
+.drops.index #attach-point img {
+    max-width: 100px;
+    height: auto;
+}
+
 .drops.index form {
     margin-bottom: 20px;
 }
