adds more banners

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="/audio-files">Audio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/events">Event Banners</a>
+                    <a class="nav-link" href="/banners">Banners</a>
                 </li>
             </ul>
 
