--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,10 @@ body > .container-fluid {
     margin-top: 40px;
 }
 
+.nav-pills {
+    margin-bottom: 20px;
+}
+
 .drops.index .loading-wrapper {
     text-align: center;
     display: none;
