--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,11 @@ body > .container-fluid {
     margin-bottom: 20px;
 }
 
+#characters img {
+    width: 96px;
+    height: 96px;
+}
+
 .drops.index .loading-wrapper {
     text-align: center;
     display: none;
