--- a/views/gear/index.hbs
+++ b/views/gear/index.hbs
@@ -4,6 +4,12 @@
     <li class="nav-item">
       <a class="nav-link active" data-toggle="tab" href="#weapons" role="tab">Weapons</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#armor" role="tab">Armor</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#accessories" role="tab">Accessories</a>
+    </li>
   </ul>
 
   <div class="tab-content">
@@ -11,6 +17,26 @@
     <div class="tab-pane active" id="weapons" role="tabpanel">
       <div class="row">
       {{#each weapons}}
+        <div class="col-lg-1 col-md-2 col-4">
+          <img class="img-fluid" src="https://ffrk.static.denagames.com/dff/static/lang/ww/compile/en/image/equipment/{{this}}/{{this}}_08_220.png" onerror="this.onerror=null;$(this).parent().remove();" />
+        </div>
+      {{/each}}
+      </div>
+    </div>
+
+    <div class="tab-pane" id="armor" role="tabpanel">
+      <div class="row">
+      {{#each armor}}
+        <div class="col-lg-1 col-md-2 col-4">
+          <img class="img-fluid" src="https://ffrk.static.denagames.com/dff/static/lang/ww/compile/en/image/equipment/{{this}}/{{this}}_08_220.png" onerror="this.onerror=null;$(this).parent().remove();" />
+        </div>
+      {{/each}}
+      </div>
+    </div>
+
+    <div class="tab-pane" id="accessories" role="tabpanel">
+      <div class="row">
+      {{#each accessories}}
         <div class="col-lg-1 col-md-2 col-4">
           <img class="img-fluid" src="https://ffrk.static.denagames.com/dff/static/lang/ww/compile/en/image/equipment/{{this}}/{{this}}_08_220.png" onerror="this.onerror=null;$(this).parent().remove();" />
         </div>
