--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/banners">Banners</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/gear">Gear</a>
+                </li>
             </ul>
 
             <form id="signout-form" style="display: none;" class="form-inline my-2 my-lg-0">
