broke it wide open

--- a/views/worlds/show.hbs
+++ b/views/worlds/show.hbs
@@ -2,6 +2,7 @@
 
 
   <h3>{{world.dena.name}} - {{world.typeName}}</h3>
+  <h4>{{world.dena.id}}</h4>
   
 
   <img class="img-fluid" src="{{world.doorImgUrl}}" onerror="this.onerror=null;$(this).remove();" />
