--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,6 +28,9 @@
                     <a class="nav-link" href="/users">Kreepers</a>
                 </li> 
                 <li class="nav-item">
+                    <a class="nav-link" href="/series">Series</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/enemies">Enemies</a>
                 </li>
                 <!-- <li class="nav-item">
