--- a/views/worlds/show.hbs
+++ b/views/worlds/show.hbs
@@ -26,7 +26,7 @@
     <tbody>
       {{#each world.dungeons}}
         <tr>
-          <td><a href="/dungeons/{{_id}}">{{name}}</a></td>
+          <td><a href="/dungeons/{{_id}}">{{dena.name}}</a></td>
           <td>{{battles.length}}</td>
         </tr>
       {{/each}}    
