--- a/views/dungeons/show.hbs
+++ b/views/dungeons/show.hbs
@@ -1,5 +1,9 @@
-<div class="container-fluid world show">
-
+<div class="container-fluid dungeon show">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/series#{{dungeon.world.series._id}}">{{dungeon.world.series.dena.formal_name}}</a></li>
+    <li class="breadcrumb-item"><a href="/worlds/{{dungeon.world._id}}">{{dungeon.world.dena.name}}</a></li>
+    <li class="breadcrumb-item active">{{dungeon.dena.name}}</li>
+  </ol>
 
   <h3>{{dungeon.dena.name}}</h3>
 
@@ -19,7 +23,45 @@
     <tbody>
       {{#each dungeon.battles}}
         <tr>
-          <td><a href="/battles/{{_id}}">{{dena.name}}</a></td>
+          <td><a href="/battles/{{_id}}">{{name}}</a></td>
+        </tr>
+      {{/each}}    
+    </tbody>
+  </table>
+
+  <h5>Enemies</h5>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each dungeon.enemies}}
+        <tr>
+          <td><a href="/enemies/{{_id}}">{{dena.name}}</a></td>
+        </tr>
+      {{/each}}    
+    </tbody>
+  </table>
+
+  <h5>Prizes</h5>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Name</th>
+        <th>Qty</th>
+        <th>For</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each dungeon.prizes}}
+        <tr>
+          <td><img src="https://ffrk.static.denagames.com/{{item.dena.image_path}}" class="image-fluid" /></td>
+          <td>{{item.dena.name}}</td>
+          <td>{{num}}</td>
+          <td>{{category}}</td>
         </tr>
       {{/each}}    
     </tbody>
