--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css?ver=1.7">
+    <link rel="stylesheet" href="/css/main.css?ver=1.8">
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
@@ -22,14 +22,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/dungeons">Drop Statistics</a>
+                    <a class="nav-link" href="/series">Data</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/users">Kreepers</a>
                 </li> 
-                <li class="nav-item">
-                    <a class="nav-link" href="/series">Series</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/enemies">Enemies</a>
                 </li>
