--- a/views/enemies/show.hbs
+++ b/views/enemies/show.hbs
@@ -1,4 +1,12 @@
 <div class="container-fluid enemies index">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/series#{{enemy.battle.dungeon.world.series._id}}">{{enemy.battle.dungeon.world.series.dena.formal_name}}</a></li>
+    <li class="breadcrumb-item"><a href="/worlds/{{enemy.battle.dungeon.world._id}}">{{enemy.battle.dungeon.world.dena.name}}</a></li>
+    <li class="breadcrumb-item"><a href="/dungeons/{{enemy.battle.dungeon._id}}">{{enemy.battle.dungeon.dena.name}}</a></li>
+    <li class="breadcrumb-item"><a href="/battles/{{enemy.battle._id}}">{{enemy.battle.name}}</a></li>
+    <li class="breadcrumb-item active">{{enemy.dena.name}}</li>
+  </ol>
+
   <div class="card">
     <div class="card-block">
       <h4 class="card-title">{{enemy.dena.name}}</h4>
