--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,9 +30,9 @@
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="/images">Images</a>
                 </li> -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/audio-files">Audio</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="/banners">Banners</a>
                 </li>
