new api endpoints

--- a/views/dungeons/show.hbs
+++ b/views/dungeons/show.hbs
@@ -6,6 +6,7 @@
   </ol>
 
   <h3>{{dungeon.dena.name}}</h3>
+  <!-- <h3>{{dungeon.dena.id}}</h3> -->
 
   {{#if dungeon.audioUrl}}
   <audio style="width: 100%;" controls="controls" preload="none"> 
