refactor drop rates

--- a/views/battles/show.hbs
+++ b/views/battles/show.hbs
@@ -17,7 +17,7 @@
           <img class="d-flex mr-3" src="{{item.imgUrl}}">
           <div class="media-body">
             <h5 class="mt-0 mb-1">{{item.name}}</h5>
-            Drop Rate: {{rate}}% - {{hits}} out of {{total}} drops for this battle have been for this item
+            This item has dropped in {{hits}} out of {{total}} runs ({{rate}}%)</a>.
           </div>
         </li>
         {{/each}}
