--- a/views/drop-rates/index.hbs
+++ b/views/drop-rates/index.hbs
@@ -2,13 +2,16 @@
   <ul class="list-unstyled">
   {{#each dropRates}}
     <li class="media">
-      <img class="d-flex mr-3" src="{{item.imgUrl}}" alt="{{item.dena.name}}" onerror="this.onerror=null;this.src='https://placeholdit.imgix.net/~text?txtsize=100&txt=%3F&w=100&h=100&txttrack=0';">
+      <img class="d-flex mr-3" src="{{item.imgUrl}}" alt="{{item.dena.name}}" onerror="this.onerror=null;this.src='https://placeholdit.imgix.net/~text?txtsize=40&txt=%3F&w=112&h=112&txttrack=0';">
       <div class="media-body">
-        <h5 class="mt-0 mb-1"><a href="/battles/{{battle._id}}">{{battle.name}}</a> - {{item.dena.name}}</h5>
-        <ul>
-          <li><strong>Runs: </strong> {{runCount}}</li>
-          <li><strong>Rate per run: </strong> {{perRun}}</li>
-          <li><strong>Rate per stamina: </strong> {{perStamina}}</li>
+        <h6 class="mt-0 mb-1">{{item.name}}</h6>
+        <ul class="list-unstyled">
+          <li>Battle: <a href="/battles/{{battle._id}}">{{battle.name}}</a></li>
+          <li>Dropped in {{hits}} out of {{runCount}} runs ({{successPct}}%)</li>
+          <li>Avg/Run: {{roundedPerRun}}</li>
+          {{#if roundedPerStamina}}
+            <li>Avg/Stam: {{roundedPerStamina}}</li>
+          {{/if}}
         </ul>
       </div>
     </li>
