adds so much shit

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/series">Data</a>
+                    <a class="nav-link" href="/series">Series</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/drop-rates">Drop Rates</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/items">Items</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/abilities">Abilities</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/soul-strikes">Soul Breaks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/record-materia">Record Materia</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/users">Kreepers</a>
