adds so much shit

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="/soul-strikes">Soul Breaks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/record-materia">Record Materia</a>
+                    <a class="nav-link" href="/record-materias">Record Materia</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/users">Kreepers</a>
